# UEBA-for-Agentic-SoC

./: .gitignore  README.md  pyproject.toml
src/agentic_soc_ueba/: __init__.py  baseline.py  config.py  engine.py  integrations.py  models.py
tests/: test_ueba_engine.py
