[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-soc-ueba"
version = "0.1.0"
description = "Production-grade UEBA module for an agentic SOC detection pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
